remove a values file

--- a/infrastructure/k8s/values/sigs-values.yaml
+++ b/infrastructure/k8s/values/sigs-values.yaml
@@ -111,7 +111,22 @@ securityContext:
     drop: ["ALL"]
 
 # -- [Environment variables](https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/) for the `external-dns` container.
-env: []
+env: #[]
+  - name: CF_API_TOKEN
+    valueFrom:
+      secretKeyRef:
+        name: cloudflare-api-cred
+        key: apiToken
+  - name: CF_API_EMAIL
+    valueFrom:
+      secretKeyRef:
+        name: cloudflare-api-cred
+        key: email
+  - name: CF_API_KEY
+    valueFrom:
+      secretKeyRef:
+        name: cloudflare-api-cred
+        key: apiKey
 
 # -- [Liveness probe](https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/) configuration for the `external-dns` container.
 # @default -- See _values.yaml_
@@ -205,13 +220,13 @@ sources:
   - ingress
 
 # -- How DNS records are synchronized between sources and providers; available values are `sync` & `upsert-only`.
-policy: upsert-only
+policy: sync
 
 # -- Specify the registry for storing ownership and labels.
 # Valid values are `txt`, `aws-sd`, `dynamodb` & `noop`.
 registry: txt
 # -- (string) Specify an identifier for this instance of _ExternalDNS_ wWhen using a registry other than `noop`.
-txtOwnerId:
+txtOwnerId: externaldns
 # -- (string) Specify a prefix for the domain names of TXT records created for the `txt` registry.
 # Mutually exclusive with `txtSuffix`.
 txtPrefix:
@@ -220,14 +235,15 @@ txtPrefix:
 txtSuffix:
 
 ## - Limit possible target zones by domain suffixes.
-domainFilters: []
+domainFilters: #[]
+  - osose.xyz
 
 ## -- Intentionally exclude domains from being managed.
 excludeDomains: []
 
 provider:
   # -- _ExternalDNS_ provider name; for the available providers and how to configure them see [README](https://github.com/kubernetes-sigs/external-dns/blob/master/charts/external-dns/README.md#providers).
-  name: aws
+  name: cloudflare
   webhook:
     image:
       # -- (string) Image repository for the `webhook` container.
@@ -237,7 +253,18 @@ provider:
       # -- Image pull policy for the `webhook` container.
       pullPolicy: IfNotPresent
     # -- [Environment variables](https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/) for the `webhook` container.
-    env: []
+    env: #[]
+      - name: CF_API_TOKEN
+        valueFrom:
+          secretKeyRef:
+            name: cloudflare-api-cred
+            key: apiKey
+      - name: CF_API_EMAIL
+        valueFrom:
+          secretKeyRef:
+            name: cloudflare-api-cred
+            key: email
+
     # -- Extra arguments to provide for the `webhook` container.
     args: []
     # -- Extra [volume mounts](https://kubernetes.io/docs/concepts/storage/volumes/) for the `webhook` container.
