clean Terraform code

--- a/infrastructure/k8s/charts/birdimage/values.yaml
+++ b/infrastructure/k8s/charts/birdimage/values.yaml
@@ -26,3 +26,7 @@ service:
   port: 4200
   targetPort: 4200
   type: ClusterIP
+
+ingress:
+  name: "birdimage-ingress"
+  host: "birdimage.osose.xyz"
