--- a/infrastructure/k8s/values/grafana-values.yaml
+++ b/infrastructure/k8s/values/grafana-values.yaml
@@ -223,7 +223,7 @@ gossipPortName: gossip
 ## ref: http://kubernetes.io/docs/user-guide/services/
 ##
 service:
-  enabled: false
+  enabled: true
   type: ClusterIP
   # Set the ip family policy to configure dual-stack see [Configure dual-stack](https://kubernetes.io/docs/concepts/services-networking/dual-stack/#services)
   ipFamilyPolicy: ""
@@ -270,7 +270,7 @@ hostAliases: []
   #     - "my.host.com"
 
 ingress:
-  enabled: false
+  enabled: true
   # For Kubernetes >= 1.18 you should specify the ingress-controller via the field ingressClassName
   # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
   # ingressClassName: nginx
