--- a/.github/workflows/infra_ci.yaml
+++ b/.github/workflows/infra_ci.yaml
@@ -86,5 +86,5 @@ jobs:
           EOF
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/main'
         run: terraform apply --auto-approve -input=false
