Add a tf init step

--- a/.github/workflows/infra_ci.yaml
+++ b/.github/workflows/infra_ci.yaml
@@ -70,6 +70,10 @@ jobs:
 
       - name: 'Install Terraform'
         uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init
+        id: init
+        run: terraform init
         
       - name: Create Tfvars file with sensitive data
         run: |
