--- a/infrastructure/k8s/charts/elk/Chart.yaml
+++ b/infrastructure/k8s/charts/elk/Chart.yaml
@@ -10,9 +10,9 @@ dependencies:
   - name: logstash
     version: 8.5.1
     repository: https://helm.elastic.co
-  - name: kibana
-    version: 8.5.1
-    repository: https://helm.elastic.co
+  # - name: kibana
+  #   version: 8.5.1
+  #   repository: https://helm.elastic.co
   - name: filebeat
     version: 8.5.1
     repository: https://helm.elastic.co
