--- a/.github/workflows/deploy_apps.yaml
+++ b/.github/workflows/deploy_apps.yaml
@@ -49,6 +49,8 @@ jobs:
           sudo apt update -y
           sudo snap install aws-cli --classic || echo "already installed"
 
+          aws s3 ls  s3://infra-shakazu-bucket/lifi/
+
           # aws s3 cp  s3://infra-shakazu-bucket/lifi/config.yaml config.yaml
 
           # master_ip=$(terraform output | grep master | grep -v kubectl | awk '{print $3}' | sed 's/\"//g')
@@ -59,13 +61,12 @@ jobs:
 
       - name: Set up SSH
         run: |
-          terraform output 
           jumpbox_ip=$(terraform output | grep jumpbox | grep -v kubectl | awk '{print $3}' | sed 's/\"//g')
           echo "bastion is $jumpbox_ip"
           sudo apt update
           sudo apt install -y openssh-client
           eval $(ssh-agent -s)
-          echo "${{ secrets.PRIVATE_KEY }}" | tr -d '\r' | ssh-add -
+          echo "$jumpbox_ip" | tr -d '\r' | ssh-add -
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           ssh-keyscan "$jumpbox_ip" >> ~/.ssh/known_hosts
