--- a/.github/workflows/deploy_apps.yaml
+++ b/.github/workflows/deploy_apps.yaml
@@ -72,7 +72,7 @@ jobs:
           sudo apt install -y openssh-client
           # eval $(ssh-agent -s)
           ssh-add -D
-          echo "$jumpbox_ip" | tr -d '\r' | ssh-add -
+          echo "${{ secrets.PRIVATE_KEY }}" | tr -d '\r' | ssh-add -
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           ssh-keyscan "$jumpbox_ip" >> ~/.ssh/known_hosts
