--- a/.github/workflows/deploy_apps.yaml
+++ b/.github/workflows/deploy_apps.yaml
@@ -84,19 +84,27 @@ jobs:
       #   with:
       #     ssh-private-key: ${{ secrets.PRIVATE_KEY }}
 
-      - name: Clone repo
+      - name: Setup SSH and Clone Repo
         run: |
           jumpbox_ip=$(terraform output | grep jumpbox | grep -v kubectl | awk '{print $3}' | sed 's/\"//g')
 
+          # Setup SSH key
+          mkdir -p ~/.ssh
+          echo "${{ secrets.PRIVATE_KEY }}" | tr -d '\r' > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H "$jumpbox_ip" >> ~/.ssh/known_hosts
+
+          # Start the SSH agent
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/id_rsa
+
+          # SSH into the jumpbox and clone the repo
           ssh -o StrictHostKeyChecking=no "ubuntu@$jumpbox_ip" -p 22 "
-          echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/k8s
-          sudo chmod 600 ~/.ssh/k8s
-          cat  ~/.ssh/k8s
-          eval $(ssh-agent -s)
-          ssh-add -D
-          ssh-add ~/.ssh/k8s
-          sudo apt install git -y && git clone git@github.com:nobleman97/bird-devops-challenge.git
+            sudo apt update &&
+            sudo apt install -y git &&
+            git clone git@github.com:nobleman97/bird-devops-challenge.git
           "
+
         
       - name: Add sensitive values
         run: |
