--- a/.github/workflows/deploy_apps.yaml
+++ b/.github/workflows/deploy_apps.yaml
@@ -101,6 +101,7 @@ jobs:
 
       - name: Terraform Apply
         run: |
+          jumpbox_ip=$(terraform output | grep jumpbox | grep -v kubectl | awk '{print $3}' | sed 's/\"//g')
           ssh -o StrictHostKeyChecking=no "ubuntu@$jumpbox_ip" -p 22 "
             cd bird-devops-challenge/infrastructure/terraform/apps 
             terraform apply --auto-approve
